feat(server): add _bbox field to citygml attribute API
